fix(QBtnDropdown): remove spacing between main button and split when outline #8594 (#8603)
#8594

--- a/ui/src/components/btn-dropdown/QBtnDropdown.sass
+++ b/ui/src/components/btn-dropdown/QBtnDropdown.sass
@@ -1,6 +1,7 @@
 .q-btn-dropdown
   &--split .q-btn-dropdown__arrow-container
-    border-left: 1px solid rgba(255,255,255,.3)
+    &:not(.q-btn--outline)
+      border-left: 1px solid rgba(255,255,255,.3)
 
     .q-btn__wrapper
       padding: 0 4px
